updating test path

--- a/.github/workflows/dotnet-build-and-test.yml
+++ b/.github/workflows/dotnet-build-and-test.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ./tests/Oak.Tests.csproj
     - name: Test
-      run: dotnet test test/ --verbosity normal
+      run: dotnet test tests/ --verbosity normal
