second wave and projects/services

--- a/Oak.UserContext/Oak.UserContext.csproj
+++ b/Oak.UserContext/Oak.UserContext.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\Oak.Core\Oak.Core.csproj" />
+  </ItemGroup>
+
 </Project>
