--- a/tests/Oak.Tests.csproj
+++ b/tests/Oak.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Oak.Core\Oak.Core.csproj" />
+    <ProjectReference Include="..\Oak\Oak.csproj" />
   </ItemGroup>
 
 </Project>
