rename Oak.Core project -> Oak.Shared

--- a/Oak/Oak.csproj
+++ b/Oak/Oak.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Oak.Shared\Oak.Shared.csproj" />
     <ProjectReference Include="..\Oak.TaskScheduler\Oak.TaskScheduler.csproj" />
     <ProjectReference Include="..\Oak.Events\Oak.Events.csproj" />
     <ProjectReference Include="..\Oak.UserContext\Oak.UserContext.csproj" />
-    <ProjectReference Include="..\Oak.Core\Oak.Core.csproj" />
     <ProjectReference Include="..\Oak.Email\Oak.Email.csproj" />
     <ProjectReference Include="..\Oak.Email.Sendgrid\Oak.Email.Sendgrid.csproj" />
   </ItemGroup>
