--- a/Oak.TaskScheduler/Oak.TaskScheduler.csproj
+++ b/Oak.TaskScheduler/Oak.TaskScheduler.csproj
@@ -8,10 +8,10 @@
     <Authors>Chris (@ChrisWeaver1)</Authors>
     <Version>0.0.1</Version>
     <Company>-</Company>
-    <PackageProjectUrl>https://github.com/weavc/Oak.Core/tree/master/Oak.TaskScheduler</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/weavc/Oak.Shared/tree/master/Oak.TaskScheduler</PackageProjectUrl>
     <Description></Description>
     <Summary></Summary>
-    <RepositoryUrl>https://github.com/weavc/Oak.Core</RepositoryUrl>
+    <RepositoryUrl>https://github.com/weavc/Oak.Shared</RepositoryUrl>
     <PackageTags>tasks schedule cron</PackageTags>
     <PackageReleaseNotes></PackageReleaseNotes>
     <AssemblyName>Oak.TaskScheduler</AssemblyName>
