--- a/Oak.UserContext/Oak.UserContext.csproj
+++ b/Oak.UserContext/Oak.UserContext.csproj
@@ -6,7 +6,7 @@
 
 
   <ItemGroup>
-    <ProjectReference Include="..\Oak.Core\Oak.Core.csproj" />
+    <ProjectReference Include="..\Oak.Shared\Oak.Shared.csproj" />
   </ItemGroup>
 
 </Project>
