--- a/Oak/Oak.csproj
+++ b/Oak/Oak.csproj
@@ -5,6 +5,27 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.1;net5.0</TargetFrameworks>
+    <PackageId>Oak</PackageId>
+    <Title>Oak</Title>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Chris (@ChrisWeaver1)</Authors>
+    <Version>0.0.1</Version>
+    <Company>-</Company>
+    <PackageProjectUrl>https://github.com/weavc/Oak</PackageProjectUrl>
+    <Description></Description>
+    <Summary></Summary>
+    <RepositoryUrl>https://github.com/weavc/Oak</RepositoryUrl>
+    <PackageTags></PackageTags>
+    <PackageReleaseNotes></PackageReleaseNotes>
+    <AssemblyName>Oak</AssemblyName>
+    <PackageIcon></PackageIcon>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <EmbedUntrackedSources>true</EmbedUntrackedSources>
+    <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Oak.Shared\Oak.Shared.csproj" />
     <ProjectReference Include="..\Oak.TaskScheduler\Oak.TaskScheduler.csproj" />
