--- a/.github/workflows/dotnet-publish-task-oak.yml
+++ b/.github/workflows/dotnet-publish-task-oak.yml
@@ -16,19 +16,19 @@ jobs:
         dotnet-version: 5.0.x
 
     - name: Restore dependencies
-      run: dotnet restore Oak/
+      run: dotnet restore src/Oak/
 
     - name: Build
-      run: dotnet build Oak/ --no-restore --configuration=Release
+      run: dotnet build src/Oak/ --no-restore --configuration=Release
 
     - name: Test
-      run: dotnet test tests/ --verbosity normal
+      run: dotnet test tests/
 
     - name: Pack
-      run: dotnet pack Oak --configuration=Release
+      run: dotnet pack src/Oak --configuration=Release
 
     - name: Authenticate
       run: dotnet nuget add source --username ChrisWeaver1 --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/weavc/index.json"
 
     - name: Publish
-      run: dotnet nuget push Oak/bin/Release/*.nupkg --source "github"
+      run: dotnet nuget push src/Oak/bin/Release/*.nupkg --source "github"
