--- a/.github/workflows/dotnet-publish-task-scheduler.yml
+++ b/.github/workflows/dotnet-publish-task-scheduler.yml
@@ -16,19 +16,19 @@ jobs:
         dotnet-version: 5.0.x
 
     - name: Restore dependencies
-      run: dotnet restore Oak.TaskScheduler/
+      run: dotnet restore src/Oak.TaskScheduler/
 
     - name: Build
-      run: dotnet build Oak.TaskScheduler/ --no-restore --configuration=Release
+      run: dotnet build src/Oak.TaskScheduler/ --no-restore --configuration=Release
 
     - name: Test
-      run: dotnet test tests/ --verbosity normal
+      run: dotnet test tests/
 
     - name: Pack
-      run: dotnet pack Oak.TaskScheduler --configuration=Release
+      run: dotnet pack src/Oak.TaskScheduler/ --configuration=Release
 
     - name: Authenticate
       run: dotnet nuget add source --username ChrisWeaver1 --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/weavc/index.json"
 
     - name: Publish
-      run: dotnet nuget push Oak.TaskScheduler/bin/Release/*.nupkg --source "github"
+      run: dotnet nuget push src/Oak.TaskScheduler/bin/Release/*.nupkg --source "github"
