--- a/src/Oak/Oak.csproj
+++ b/src/Oak/Oak.csproj
@@ -22,7 +22,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Oak.Shared\Oak.Shared.csproj" />
+    <ProjectReference Include="..\Oak.Core\Oak.Core.csproj" />
     <ProjectReference Include="..\Oak.TaskScheduler\Oak.TaskScheduler.csproj" />
     <ProjectReference Include="..\Oak.Events\Oak.Events.csproj" />
     <ProjectReference Include="..\Oak.UserContext\Oak.UserContext.csproj" />
