--- a/src/Oak.Email/Oak.Email.csproj
+++ b/src/Oak.Email/Oak.Email.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="2.10.1" />
+    <PackageReference Include="Sendgrid" Version="9.24.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
 
