--- a/src/Oak.Core/Oak.Core.nuspec
+++ b/src/Oak.Core/Oak.Core.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Oak.Core</id>
-    <version>0.0.1</version>
+    <version>0.0.3-preview1</version>
     <title>Oak.Core</title>
     <authors>Chris (@ChrisWeaver1)</authors>
     <owners>Chris (@ChrisWeaver1)</owners>
