--- a/src/Oak.TaskScheduler/Oak.TaskScheduler.nuspec
+++ b/src/Oak.TaskScheduler/Oak.TaskScheduler.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Oak.TaskScheduler</id>
-    <version>0.0.2</version>
+    <version>0.0.3-preview1</version>
     <title>Oak.TaskScheduler</title>
     <authors>Chris (@ChrisWeaver1)</authors>
     <owners>Chris (@ChrisWeaver1)</owners>
