--- a/src/Oak/Oak.nuspec
+++ b/src/Oak/Oak.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Oak</id>
-    <version>0.0.2.1</version>
+    <version>0.0.3-preview1</version>
     <title>Oak</title>
     <authors>Chris (@ChrisWeaver1)</authors>
     <owners>Chris (@ChrisWeaver1)</owners>
@@ -10,16 +10,16 @@
     <repository type="git" url="https://github.com/weavc/Oak.git"/>
     <dependencies>
       <group targetFramework="net5.0">
-        <dependency id="Oak.Email" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Oak.Events" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Oak.TaskScheduler" version="0.0.1" exclude="Build,Analyzers" />
-        <dependency id="Oak.Webhooks" version="1.0.0" exclude="Build,Analyzers" />
+        <dependency id="Oak.Email" version="0.0.3-preview1" exclude="Build,Analyzers" />
+        <dependency id="Oak.Events" version="0.0.3-preview1" exclude="Build,Analyzers" />
+        <dependency id="Oak.TaskScheduler" version="0.0.3-preview1" exclude="Build,Analyzers" />
+        <dependency id="Oak.Webhooks" version="0.0.3-preview1" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETStandard2.1">
-        <dependency id="Oak.Email" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Oak.Events" version="1.0.0" exclude="Build,Analyzers" />
-        <dependency id="Oak.TaskScheduler" version="0.0.1" exclude="Build,Analyzers" />
-        <dependency id="Oak.Webhooks" version="1.0.0" exclude="Build,Analyzers" />
+        <dependency id="Oak.Email" version="0.0.3-preview1" exclude="Build,Analyzers" />
+        <dependency id="Oak.Events" version="0.0.3-preview1" exclude="Build,Analyzers" />
+        <dependency id="Oak.TaskScheduler" version="0.0.3-preview1" exclude="Build,Analyzers" />
+        <dependency id="Oak.Webhooks" version="0.0.3-preview1" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
