Publish all packages + release

--- a/.github/workflows/dotnet-publish-task-oak.yml
+++ b/.github/workflows/dotnet-publish-task-oak.yml
@@ -1,6 +1,11 @@
 name: Dotnet Publish Oak Package
 
-on: [workflow_dispatch]
+on: 
+  workflow_dispatch:
+  workflow_run:
+    workflows: ["Dotnet Publish Packages"]
+    types:
+      - completed
 
 jobs:
   build:
