--- a/.github/workflows/dotnet-publish-email.yml
+++ b/.github/workflows/dotnet-publish-email.yml
@@ -1,6 +1,12 @@
 name: Dotnet Publish Oak.Email Package
 
-on: [workflow_dispatch]
+on: 
+  workflow_dispatch:
+  workflow_run:
+    workflows: ["Dotnet Publish Packages"]
+    types:
+      - completed
+
 
 jobs:
   build:
