--- a/src/Oak.Email/Oak.Email.nuspec
+++ b/src/Oak.Email/Oak.Email.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Oak.Email</id>
-    <version>0.0.3-preview1</version>
+    <version>0.0.3-preview2</version>
     <title>Oak.Email</title>
     <authors>Chris (@ChrisWeaver1)</authors>
     <owners>Chris (@ChrisWeaver1)</owners>
@@ -22,7 +22,7 @@
     </dependencies>
   </metadata>
    <files>
-     <file src="bin\Release\netstandard2.1\Oak.Core.dll" target="lib\netstandard2.1" />
-     <file src="bin\Release\net5.0\Oak.Core.dll" target="lib\net5.0" />
+      <file src="bin\Release\netstandard2.1\**\*" target="lib\netstandard2.1" />
+      <file src="bin\Release\net5.0\**\*" target="lib\net5.0" />
   </files>
 </package>
