--- a/src/Oak.TaskScheduler/Oak.TaskScheduler.csproj
+++ b/src/Oak.TaskScheduler/Oak.TaskScheduler.csproj
@@ -12,4 +12,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Oak.Core\Oak.Core.csproj" />
+  </ItemGroup>
 </Project>
