--- a/src/Oak/Oak.nuspec
+++ b/src/Oak/Oak.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Oak</id>
-    <version>0.0.3-preview2</version>
+    <version>0.0.3-preview3</version>
     <title>Oak</title>
     <authors>Chris (@ChrisWeaver1)</authors>
     <owners>Chris (@ChrisWeaver1)</owners>
@@ -10,13 +10,28 @@
     <repository type="git" url="https://github.com/weavc/Oak.git"/>
     <dependencies>
       <group targetFramework="net5.0">
+        <dependency id="Oak.Email" version="0.0.3-preview2" exclude="Build,Analyzers" />
+        <dependency id="Oak.Events" version="0.0.3-preview2" exclude="Build,Analyzers" />
+        <dependency id="Oak.TaskScheduler" version="0.0.3-preview2" exclude="Build,Analyzers" />
+        <dependency id="Oak.Webhooks" version="0.0.3-preview2" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETStandard2.1">
+        <dependency id="Oak.Email" version="0.0.3-preview2" exclude="Build,Analyzers" />
+        <dependency id="Oak.Events" version="0.0.3-preview2" exclude="Build,Analyzers" />
+        <dependency id="Oak.TaskScheduler" version="0.0.3-preview2" exclude="Build,Analyzers" />
+        <dependency id="Oak.Webhooks" version="0.0.3-preview2" exclude="Build,Analyzers" />
       </group>
     </dependencies>
   </metadata>
    <files>
-      <file src="bin\Release\netstandard2.1\**\*" target="lib\netstandard2.1" />
-      <file src="bin\Release\net5.0\**\*" target="lib\net5.0" />
+      <file src="bin/Release/net5.0/Oak.pdb" target="lib/net5.0/Oak.pdb" />
+      <file src="bin/Release/netstandard2.1/Oak.pdb" target="lib/netstandard2.1/Oak.pdb" />
+      <file src="bin/Release/net5.0/Oak.dll" target="lib/net5.0/Oak.dll" />
+      <file src="bin/Release/netstandard2.1/Oak.dll" target="lib/netstandard2.1/Oak.dll" />
+
+      <file src="bin/Release/net5.0/Oak.Core.dll" target="lib/net5.0/Oak.Core.dll" />
+      <file src="bin/Release/netstandard2.1/Oak.Core.dll" target="lib/netstandard2.1/Oak.Core.dll" />
+      <file src="bin/Release/net5.0/Oak.Core.pdb" target="lib/net5.0/Oak.Core.pdb" />
+      <file src="bin/Release/netstandard2.1/Oak.Core.pdb" target="lib/netstandard2.1/Oak.Core.pdb" /> 
   </files>
 </package>
