--- a/src/Oak.Core/Oak.Core.nuspec
+++ b/src/Oak.Core/Oak.Core.nuspec
@@ -14,5 +14,7 @@
     </dependencies>
   </metadata>
    <files>
+      <file src="bin\Release\netstandard2.1\**\*" target="lib\netstandard2.1" />
+      <file src="bin\Release\net5.0\**\*" target="lib\net5.0" />
   </files>
 </package>
